--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /**
- * Theme Name: Flawless
+ * Theme Name: Flawless v0.3
  * Theme URI: http://usabilitydynamics.com/products/flawless
  * Description: A professional and customizable theme.  Customizable content types, drag-and-drop page elements and many advanced features.
  * Version: 0.3.6
