theme name modified to include version branch and github reference

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
  * Author URI: http://usabilitydynamics.com/
  * Tags: customizable, template, framework, carrington, cms, business, carrington-build, green, blue, one-column, two-columns, three-columns, fixed-width, editor-style, threaded-comments, microformats, buddypress
  *
+ * GitHub Theme URI: UsabilityDynamics/wp-flawless
+ * GitHub Branch: v0.3
+ *
  * @package flawless
  *
  * Copyright (c) 2011 Usability Dynamics, Inc. All rights reserved.
